--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ hs_err_pid*
 /org.eclipse.wst.jsdt.ui.superType.container
 /org.eclipse.wst.jsdt.ui.superType.name
 /org.eclipse.wst.validation.prefs
+
+/target/*
