--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,13 @@
 			<artifactId>property-inject</artifactId>
 			<version>1.0.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.4</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
